multi page report

--- a/report/References.bib
+++ b/report/References.bib
@@ -1,37 +1,37 @@
 @Inbook{Castellano2008,
-    author="Castellano, Ginevra
+  author="Castellano, Ginevra
 and Kessous, Loic
 and Caridakis, George",
-    editor="Peter, Christian
+  editor="Peter, Christian
 and Beale, Russell",
-    title="Emotion Recognition through Multiple Modalities: Face, Body Gesture, Speech",
-    bookTitle="Affect and Emotion in Human-Computer Interaction: From Theory to Applications",
-    year="2008",
-    publisher="Springer Berlin Heidelberg",
-    address="Berlin, Heidelberg",
-    pages="92--103",
-    abstract="In this paper we present a multimodal approach for the recognition of eight emotions. Our approach integrates information from facial expressions, body movement and gestures and speech. We trained and tested a model with a Bayesian classifier, using a multimodal corpus with eight emotions and ten subjects. Firstly, individual classifiers were trained for each modality. Next, data were fused at the feature level and the decision level. Fusing the multimodal data resulted in a large increase in the recognition rates in comparison with the unimodal systems: the multimodal approach gave an improvement of more than 10{\%} when compared to the most successful unimodal system. Further, the fusion performed at the feature level provided better results than the one performed at the decision level.",
-    isbn="978-3-540-85099-1",
-    doi="10.1007/978-3-540-85099-1_8",
-    url="https://doi.org/10.1007/978-3-540-85099-1_8"
+  title="Emotion Recognition through Multiple Modalities: Face, Body Gesture, Speech",
+  bookTitle="Affect and Emotion in Human-Computer Interaction: From Theory to Applications",
+  year="2008",
+  publisher="Springer Berlin Heidelberg",
+  address="Berlin, Heidelberg",
+  pages="92--103",
+  abstract="In this paper we present a multimodal approach for the recognition of eight emotions. Our approach integrates information from facial expressions, body movement and gestures and speech. We trained and tested a model with a Bayesian classifier, using a multimodal corpus with eight emotions and ten subjects. Firstly, individual classifiers were trained for each modality. Next, data were fused at the feature level and the decision level. Fusing the multimodal data resulted in a large increase in the recognition rates in comparison with the unimodal systems: the multimodal approach gave an improvement of more than 10{\%} when compared to the most successful unimodal system. Further, the fusion performed at the feature level provided better results than the one performed at the decision level.",
+  isbn="978-3-540-85099-1",
+  doi="10.1007/978-3-540-85099-1_8",
+  url="https://doi.org/10.1007/978-3-540-85099-1_8"
 }
 
 
 
 @article{CHEN2013175,
-    title = "Recognizing expressions from face and body gesture by temporal normalized motion and appearance features",
-    journal = "Image and Vision Computing",
-    volume = "31",
-    number = "2",
-    pages = "175 - 185",
-    year = "2013",
-    note = "Affect Analysis In Continuous Input",
-    issn = "0262-8856",
-    doi = "https://doi.org/10.1016/j.imavis.2012.06.014",
-    url = "http://www.sciencedirect.com/science/article/pii/S0262885612001023",
-    author = "Shizhi Chen and YingLi Tian and Qingshan Liu and Dimitris N. Metaxas",
-    keywords = "Affect recognition, Facial feature, Body gesture, MHI-HOG, Image-HOG",
-    abstract = "Recently, recognizing affects from both face and body gestures attracts more attentions. However, it still lacks of efficient and effective features to describe the dynamics of face and gestures for real-time automatic affect recognition. In this paper, we combine both local motion and appearance feature in a novel framework to model the temporal dynamics of face and body gesture. The proposed framework employs MHI-HOG and Image-HOG features through temporal normalization or bag of words to capture motion and appearance information. The MHI-HOG stands for Histogram of Oriented Gradients (HOG) on the Motion History Image (MHI). It captures motion direction and speed of a region of interest as an expression evolves over the time. The Image-HOG captures the appearance information of the corresponding region of interest. The temporal normalization method explicitly solves the time resolution issue in the video-based affect recognition. To implicitly model local temporal dynamics of an expression, we further propose a bag of words (BOW) based representation for both MHI-HOG and Image-HOG features. Experimental results demonstrate promising performance as compared with the state-of-the-art. Significant improvement of recognition accuracy is achieved as compared with the frame-based approach that does not consider the underlying temporal dynamics."
+  title = "Recognizing expressions from face and body gesture by temporal normalized motion and appearance features",
+  journal = "Image and Vision Computing",
+  volume = "31",
+  number = "2",
+  pages = "175 - 185",
+  year = "2013",
+  note = "Affect Analysis In Continuous Input",
+  issn = "0262-8856",
+  doi = "https://doi.org/10.1016/j.imavis.2012.06.014",
+  url = "http://www.sciencedirect.com/science/article/pii/S0262885612001023",
+  author = "Shizhi Chen and YingLi Tian and Qingshan Liu and Dimitris N. Metaxas",
+  keywords = "Affect recognition, Facial feature, Body gesture, MHI-HOG, Image-HOG",
+  abstract = "Recently, recognizing affects from both face and body gestures attracts more attentions. However, it still lacks of efficient and effective features to describe the dynamics of face and gestures for real-time automatic affect recognition. In this paper, we combine both local motion and appearance feature in a novel framework to model the temporal dynamics of face and body gesture. The proposed framework employs MHI-HOG and Image-HOG features through temporal normalization or bag of words to capture motion and appearance information. The MHI-HOG stands for Histogram of Oriented Gradients (HOG) on the Motion History Image (MHI). It captures motion direction and speed of a region of interest as an expression evolves over the time. The Image-HOG captures the appearance information of the corresponding region of interest. The temporal normalization method explicitly solves the time resolution issue in the video-based affect recognition. To implicitly model local temporal dynamics of an expression, we further propose a bag of words (BOW) based representation for both MHI-HOG and Image-HOG features. Experimental results demonstrate promising performance as compared with the state-of-the-art. Significant improvement of recognition accuracy is achieved as compared with the frame-based approach that does not consider the underlying temporal dynamics."
 }
 
 
@@ -230,15 +230,15 @@ primaryClass={cs.LG}
 }
 
 @article{Sandler_2018,
-title={MobileNetV2: Inverted Residuals and Linear Bottlenecks},
-ISBN={9781538664209},
-url={http://dx.doi.org/10.1109/cvpr.2018.00474},
-DOI={10.1109/cvpr.2018.00474},
-journal={2018 IEEE/CVF Conference on Computer Vision and Pattern Recognition},
-publisher={IEEE},
-author={Sandler, Mark and Howard, Andrew and Zhu, Menglong and Zhmoginov, Andrey and Chen, Liang-Chieh},
-year={2018},
-month={Jun}
+   title={MobileNetV2: Inverted Residuals and Linear Bottlenecks},
+   ISBN={9781538664209},
+   url={http://dx.doi.org/10.1109/cvpr.2018.00474},
+   DOI={10.1109/cvpr.2018.00474},
+   journal={2018 IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+   publisher={IEEE},
+   author={Sandler, Mark and Howard, Andrew and Zhu, Menglong and Zhmoginov, Andrey and Chen, Liang-Chieh},
+   year={2018},
+   month={Jun}
 }
 
 @inproceedings{45381,
@@ -251,8 +251,8 @@ pages	= {265--283}
 }
 
 
-@article{DBLP:journals/corr/BuitinckLBPMGNPGGLVJHV13,
-author    = {Lars Buitinck and
+@article{DBLPjournalscorrBuitinckLBPMGNPGGLVJHV13,
+  author    = {Lars Buitinck and
                Gilles Louppe and
                Mathieu Blondel and
                Fabian Pedregosa and
@@ -267,17 +267,17 @@ author    = {Lars Buitinck and
                Arnaud Joly and
                Brian Holt and
                Ga{\"{e}}l Varoquaux},
-title     = {{API} design for machine learning software: experiences from the scikit-learn
+  title     = {{API} design for machine learning software: experiences from the scikit-learn
                project},
-journal   = {CoRR},
-volume    = {abs/1309.0238},
-year      = {2013},
-url       = {http://arxiv.org/abs/1309.0238},
-archivePrefix = {arXiv},
-eprint    = {1309.0238},
-timestamp = {Mon, 13 Aug 2018 16:49:16 +0200},
-biburl    = {https://dblp.org/rec/bib/journals/corr/BuitinckLBPMGNPGGLVJHV13},
-bibsource = {dblp computer science bibliography, https://dblp.org}
+  journal   = {CoRR},
+  volume    = {abs/1309.0238},
+  year      = {2013},
+  url       = {http://arxiv.org/abs/1309.0238},
+  archivePrefix = {arXiv},
+  eprint    = {1309.0238},
+  timestamp = {Mon, 13 Aug 2018 16:49:16 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/BuitinckLBPMGNPGGLVJHV13},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 
@@ -322,21 +322,21 @@ url="https://doi.org/10.1007/s10462-018-09679-z"
 }
 
 @misc{goldsborough2016tour,
-title={A Tour of TensorFlow},
-author={Peter Goldsborough},
-year={2016},
-eprint={1610.01178},
-archivePrefix={arXiv},
-primaryClass={cs.LG}
+    title={A Tour of TensorFlow},
+    author={Peter Goldsborough},
+    year={2016},
+    eprint={1610.01178},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
 }
 
 @misc{schrimpf2016i,
-title={Should I use TensorFlow},
-author={Martin Schrimpf},
-year={2016},
-eprint={1611.08903},
-archivePrefix={arXiv},
-primaryClass={cs.LG}
+    title={Should I use TensorFlow},
+    author={Martin Schrimpf},
+    year={2016},
+    eprint={1611.08903},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
 }
 
 @article{doi:10.1162neco_a_00990,
@@ -348,18 +348,18 @@ number = {9},
 pages = {2352-2449},
 year = {2017},
 doi = {10.1162/neco\_a\_00990},
-note ={PMID: 28599112},
+    note ={PMID: 28599112},
 
-URL = {
-https://doi.org/10.1162/neco_a_00990
-
+URL = { 
+        https://doi.org/10.1162/neco_a_00990
+    
 },
-eprint = {
-https://doi.org/10.1162/neco_a_00990
-
+eprint = { 
+        https://doi.org/10.1162/neco_a_00990
+    
 }
 ,
-abstract = { Convolutional neural networks (CNNs) have been applied to visual tasks since the late 1980s. However, despite a few scattered applications, they were dormant until the mid-2000s when developments in computing power and the advent of large amounts of labeled data, supplemented by improved algorithms, contributed to their advancement and brought them to the forefront of a neural network renaissance that has seen rapid progression since 2012. In this review, which focuses on the application of CNNs to image classification tasks, we cover their development, from their predecessors up to recent state-of-the-art deep learning systems. Along the way, we analyze (1) their early successes, (2) their role in the deep learning renaissance, (3) selected symbolic works that have contributed to their recent popularity, and (4) several improvement attempts by reviewing contributions and challenges of over 300 publications. We also introduce some of their current trends and remaining challenges. }
+    abstract = { Convolutional neural networks (CNNs) have been applied to visual tasks since the late 1980s. However, despite a few scattered applications, they were dormant until the mid-2000s when developments in computing power and the advent of large amounts of labeled data, supplemented by improved algorithms, contributed to their advancement and brought them to the forefront of a neural network renaissance that has seen rapid progression since 2012. In this review, which focuses on the application of CNNs to image classification tasks, we cover their development, from their predecessors up to recent state-of-the-art deep learning systems. Along the way, we analyze (1) their early successes, (2) their role in the deep learning renaissance, (3) selected symbolic works that have contributed to their recent popularity, and (4) several improvement attempts by reviewing contributions and challenges of over 300 publications. We also introduce some of their current trends and remaining challenges. }
 }
 
 @article{TomeD2016DCNN,
@@ -396,15 +396,15 @@ keywords = {Convolution ; Hidden Markov Models ; Speech ; Speech Recognition ; V
 }
 
 @article{Szegedy_2016,
-title={Rethinking the Inception Architecture for Computer Vision},
-ISBN={9781467388511},
-url={http://dx.doi.org/10.1109/CVPR.2016.308},
-DOI={10.1109/cvpr.2016.308},
-journal={2016 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-publisher={IEEE},
-author={Szegedy, Christian and Vanhoucke, Vincent and Ioffe, Sergey and Shlens, Jon and Wojna, Zbigniew},
-year={2016},
-month={Jun}
+   title={Rethinking the Inception Architecture for Computer Vision},
+   ISBN={9781467388511},
+   url={http://dx.doi.org/10.1109/CVPR.2016.308},
+   DOI={10.1109/cvpr.2016.308},
+   journal={2016 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+   publisher={IEEE},
+   author={Szegedy, Christian and Vanhoucke, Vincent and Ioffe, Sergey and Shlens, Jon and Wojna, Zbigniew},
+   year={2016},
+   month={Jun}
 }
 
 
@@ -447,24 +447,24 @@ url="https://doi.org/10.1007/s13735-014-0069-5"
 
 
 @misc{yang2017tensortrain,
-title={Tensor-Train Recurrent Neural Networks for Video Classification},
-author={Yinchong Yang and Denis Krompass and Volker Tresp},
-year={2017},
-eprint={1707.01786},
-archivePrefix={arXiv},
-primaryClass={cs.CV}
+    title={Tensor-Train Recurrent Neural Networks for Video Classification},
+    author={Yinchong Yang and Denis Krompass and Volker Tresp},
+    year={2017},
+    eprint={1707.01786},
+    archivePrefix={arXiv},
+    primaryClass={cs.CV}
 }
 
 @article{Randles_2017,
-title={Using the Jupyter Notebook as a Tool for Open Science: An Empirical Study},
-ISBN={9781538638613},
-url={http://dx.doi.org/10.1109/jcdl.2017.7991618},
-DOI={10.1109/jcdl.2017.7991618},
-journal={2017 ACM/IEEE Joint Conference on Digital Libraries (JCDL)},
-publisher={IEEE},
-author={Randles, Bernadette M. and Pasquetto, Irene V. and Golshan, Milena S. and Borgman, Christine L.},
-year={2017},
-month={Jun}
+   title={Using the Jupyter Notebook as a Tool for Open Science: An Empirical Study},
+   ISBN={9781538638613},
+   url={http://dx.doi.org/10.1109/jcdl.2017.7991618},
+   DOI={10.1109/jcdl.2017.7991618},
+   journal={2017 ACM/IEEE Joint Conference on Digital Libraries (JCDL)},
+   publisher={IEEE},
+   author={Randles, Bernadette M. and Pasquetto, Irene V. and Golshan, Milena S. and Borgman, Christine L.},
+   year={2017},
+   month={Jun}
 }
 
 @inproceedings{45619,
@@ -475,42 +475,35 @@ URL	= {https://arxiv.org/pdf/1609.08675v1.pdf},
 booktitle	= {arXiv:1609.08675}
 }
 
-@inproceedings{45619,
-title	= {YouTube-8M: A Large-Scale Video Classification Benchmark},
-author	= {Sami Abu-El-Haija and Nisarg Kothari and Joonseok Lee and Apostol (Paul) Natsev and George Toderici and Balakrishnan Varadarajan and Sudheendra Vijayanarasimhan},
-year	= {2016},
-URL	= {https://arxiv.org/pdf/1609.08675v1.pdf},
-booktitle	= {arXiv:1609.08675}
-}
 
 @article{Lux:2019:OSC:3310195.3310202,
-author = {Lux, Mathias and Bertini, Marco},
-title = {Open Source Column: Deep Learning with Keras},
-journal = {SIGMultimedia Rec.},
-issue_date = {December 2018},
-volume = {10},
-number = {4},
-month = jan,
-year = {2019},
-issn = {1947-4598},
-pages = {7:7--7:7},
-articleno = {7},
-numpages = {1},
-url = {http://doi.acm.org/10.1145/3310195.3310202},
-doi = {10.1145/3310195.3310202},
-acmid = {3310202},
-publisher = {ACM},
-address = {New York, NY, USA},
-}
+ author = {Lux, Mathias and Bertini, Marco},
+ title = {Open Source Column: Deep Learning with Keras},
+ journal = {SIGMultimedia Rec.},
+ issue_date = {December 2018},
+ volume = {10},
+ number = {4},
+ month = jan,
+ year = {2019},
+ issn = {1947-4598},
+ pages = {7:7--7:7},
+ articleno = {7},
+ numpages = {1},
+ url = {http://doi.acm.org/10.1145/3310195.3310202},
+ doi = {10.1145/3310195.3310202},
+ acmid = {3310202},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
 
 
 @misc{wang2019benchmarking,
-title={Benchmarking TPU, GPU, and CPU Platforms for Deep Learning},
-author={Yu Emma Wang and Gu-Yeon Wei and David Brooks},
-year={2019},
-eprint={1907.10701},
-archivePrefix={arXiv},
-primaryClass={cs.LG}
+    title={Benchmarking TPU, GPU, and CPU Platforms for Deep Learning},
+    author={Yu Emma Wang and Gu-Yeon Wei and David Brooks},
+    year={2019},
+    eprint={1907.10701},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
 }
 
 
@@ -527,36 +520,45 @@ keywords = {video coding;  classification;  deep learning;  Computer architectur
 
 
 @book{Goodfellow-et-al-2016,
-title={Deep Learning},
-author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
-publisher={MIT Press},
-note={\url{http://www.deeplearningbook.org}},
-year={2016}
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016}
 }
 
 @misc{howard2017mobilenets,
-title={MobileNets: Efficient Convolutional Neural Networks for Mobile Vision Applications},
-author={Andrew G. Howard and Menglong Zhu and Bo Chen and Dmitry Kalenichenko and Weijun Wang and Tobias Weyand and Marco Andreetto and Hartwig Adam},
-year={2017},
-eprint={1704.04861},
-archivePrefix={arXiv},
-primaryClass={cs.CV}
+    title={MobileNets: Efficient Convolutional Neural Networks for Mobile Vision Applications},
+    author={Andrew G. Howard and Menglong Zhu and Bo Chen and Dmitry Kalenichenko and Weijun Wang and Tobias Weyand and Marco Andreetto and Hartwig Adam},
+    year={2017},
+    eprint={1704.04861},
+    archivePrefix={arXiv},
+    primaryClass={cs.CV}
 }
 
 @misc{kingma2014adam,
-title={Adam: A Method for Stochastic Optimization},
-author={Diederik P. Kingma and Jimmy Ba},
-year={2014},
-eprint={1412.6980},
-archivePrefix={arXiv},
-primaryClass={cs.LG}
+    title={Adam: A Method for Stochastic Optimization},
+    author={Diederik P. Kingma and Jimmy Ba},
+    year={2014},
+    eprint={1412.6980},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
 }
 
 @misc{ruder2016overview,
-title={An overview of gradient descent optimization algorithms},
-author={Sebastian Ruder},
-year={2016},
-eprint={1609.04747},
-archivePrefix={arXiv},
-primaryClass={cs.LG}
+    title={An overview of gradient descent optimization algorithms},
+    author={Sebastian Ruder},
+    year={2016},
+    eprint={1609.04747},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
+}
+
+
+@misc{projectGithub,
+      author = "Olubunmi Aworant",
+      title = "Project Github",
+      month = "September",
+      year = "2019",
+      url = "https://github.com/BunmiA/msc-exploring-neural-networks"
 }
